# seal-benchmarks-matrix-multiplication

./: CMakeLists.txt  matrix_mul.h  test.cpp
